--- a/babybackribs.html
+++ b/babybackribs.html
@@ -7,7 +7,7 @@
     <body>
       <a href="./index.html">Home</a>
         <h1>Fall Off The Bone Ribs At Home</h1>
-          <img src="./img/ribs.jpg" width="750" alt="photo of bbq baby back ribs">
+        <img src="./img/ribs.jpg" width="750" alt="photo of ribs">
            <p><h2>A section of slow cooked pork carcass drenched in sauce</h2></p>
             <p><h1>Big Flavor At Home Without the Big Restaurant Price</h1></p>      
               <p></p>
@@ -48,4 +48,4 @@
                       </ol>
         </body>
 
-  </html>
+</html>
