--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
             </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1><text-align: center>Odin Recipes</h1>
 
           <ul>
 
