--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
             </head>
     <body>
-        <h1><div stytle="text-align: center">Odin Recipes</h1>
-
+        <h1><div align:"center">Odin Recipes</h1>
+            </div>
           <ul>
 
             <p><a href="./lasagna.html">Best Damn Lasagna</a></p>
