--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
             </head>
     <body>
-        <h1><div align:"center">Odin Recipes</h1>
+        <div align:"center">Odin Recipes
             </div>
           <ul>
 
