--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Recipe Website</title>
-        <meta charset="utf-8">
+      <title>Recipe Website</title> 
+      <meta charset="utf-8">
             </head>
     <body>
-        <h1>Odin Recipes</h1>
 
+   
+   
+       <div><h1>Odin Recipes</h1></div>
+ 
           <ul>
 
             <p><a href="./lasagna.html">Best Damn Lasagna</a></p>
