style.css added css features added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
       <title>Recipe Website</title> 
       <meta charset="utf-8">
-            </head>
+       <link rel="stylesheet" href="style.css">     
+        </head>
     <body>
-        <div align:"center">Odin Recipes
-            </div>
-          <ul>
+        <div class="recipe">Odin Recipes</div>
+          
+        <ul><p>Links</p>
 
             <p><a href="./lasagna.html">Best Damn Lasagna</a></p>
 
