more external elements added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="recipe">Odin Recipes</div>
           
-        <ul><p>Links</p>
+        <ul><div class="links">Links</div>
 
             <p><a href="./lasagna.html">Best Damn Lasagna</a></p>
 
