css changes to fajitas.html and fajitas.css

--- a/fajitas.html
+++ b/fajitas.html
@@ -3,12 +3,13 @@
     <head>
         <title>Fajita's Muy Bueno</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="fajitas.css">
             </head>
     <body>
-      <a href="./index.html">Home</a>
-        <h1>Señior McDonald's Famous Fajitas</h1>
+      <button style="color: black; font-size: 30px; font-family: 'Times New Roman', Times, serif; background-color: chartreuse;" href="./index.html">Home</button>
+        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 100px;">Señior McDonald's Famous Fajitas</h1>
           <img src="./img/fajitas.jpg" width="750" alt="photo of 10,000 Chicken Pha-gitas">
-           <p><h2>You'd swear they came off the side of a taco truck....</h2></p>
+           <p><h2 class="title2">You'd swear they came off the side of a taco truck....</h2></p>
             <p><h1>Just trying to keep a tradition alive</h1></p>      
               <p></p>
               <p><font size="5">Kids, ya'll come gather round the time machine called "Old Man's Memories" and let me tell you
@@ -24,7 +25,7 @@
                   <p></p>
                   <p></p>
                   <p></p>
-                  <p><h2>The Ingredients</h2>  
+                    <div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 75px;">The Ingredients</div> 
                     <ul>
                         <li><font size="4">1-2lbs of skirt steak/chicken breast or thigh</font></li>
                         <li><font size="4">Fajita Seasoning of Choice</font></li>
