adding css elements

--- a/fajitas.html
+++ b/fajitas.html
@@ -26,36 +26,36 @@
                   <p></p>
                   <p></p>
                     <div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 75px;">The Ingredients</div> 
-                    <ul>
-                        <li><font size="4">1-2lbs of skirt steak/chicken breast or thigh</font></li>
-                        <li><font size="4">Fajita Seasoning of Choice</font></li>
-                        <li><font size="4">2 tblsp lemon juice</font></li>  
-                        <li><font size="4">1 tblsp lime juice</font></li>
-                        <li><font size="4">1 Onion</font></li>
-                        <li><font size="4">1-2 Bell Pepper</font></li>
-                        <li><font size-"4">Cilantro</font></li>
-                        <li><font size-"4">Avacado Oil</font></li>
-                        <li><font size-"4">1-2 tblsp of Butter</font></li>
-                        <li><font size-"4">Tortillas of choice</font></li>
-                        <li><font size-"4">Shredded Cheddar/Colby Jack</font></li>
-                        <li><font size-"4">1 Bottle of Zesty Italian Salad Dressing</font></li>
+                    <ul class="ingredients">
+                        <li>1-2lbs of skirt steak/chicken breast or thigh</li>
+                        <li>Fajita Seasoning of Choice</li>
+                        <li>2 tblsp lemon juice</li>  
+                        <li>1 tblsp lime juice</li>
+                        <li>1 Onion</li>
+                        <li>1-2 Bell Pepper</li>
+                        <li">Cilantro</li>
+                        <li">Avacado Oil</li>
+                        <li">1-2 tblsp of Butter</li>
+                        <li">Tortillas of choice</li>
+                        <li">Shredded Cheddar/Colby Jack</li>
+                        <li>1 Bottle of Zesty Italian Salad Dressing</li>
                              <a><em>I'm seriously you guys</em></a>                   
                       </ul>
                    <p></p> 
-                    <p><h2>The Preparation</h2></p>
-                      <ol>
-                        <li><font size="4">Trim steak/chicken as needed</font></li>
-                        <li><font size="4">Season the meat liberally, like a lot, like....way more than you think is necessary</font></li>  
-                        <li><font size="4">Place in a gallon sized zip-loc bag and add the lemon and lime juice</font></li>
-                        <li><font size="4">Add enough Zesty Italian to the bag to completey submerge it's contents</font></li>
-                        <li><font size="4">Put the bag o' meat in a bowl to catch leaks and place in the refridgerator to marinade.  48hrs for Beef, 24hrs for the Chicken</font></li>
-                        <li><font size="4">When fajita day is upon you, start by slicing your onions and bell peppers</font></li>
-                        <li><font size="4">Since we are gonna do these Tex-Mex style, sautee the onions and peppers in a little butter and avocado oil</font></li>
-                        <li><font size="4">Grill fajitas till done.  Approx 140&deg; for the beef and 165&deg; for chicken</font></li>
-                        <li><font size="4">Slice against the grain for maximum tenderness</font></li>
-                        <li><font size="4">Serve on freshly warmed tortillas, topped with those onions and peppers from earlier</font></li>
-                        <li><font size="4">Finish off with chopped cilantro and some shredded cheese</font></li>
-                        <li><font size-"4">Make sure to have a proper siesta after the fiesta</font></li>
+                   <div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 75px;">The Preparation</div> 
+                      <ol class="preparation">
+                        <li>Trim steak/chicken as needed</li>
+                        <li>Season the meat liberally, like a lot, like....way more than you think is necessary</li>  
+                        <li>Place in a gallon sized zip-loc bag and add the lemon and lime juice</li>
+                        <li>Add enough Zesty Italian to the bag to completey submerge it's contents</li>
+                        <li>Put the bag o' meat in a bowl to catch leaks and place in the refridgerator to marinade.  48hrs for Beef, 24hrs for the Chicken</li>
+                        <li>When fajita day is upon you, start by slicing your onions and bell peppers</li>
+                        <li>Since we are gonna do these Tex-Mex style, sautee the onions and peppers in a little butter and avocado oil</li>
+                        <li>Grill fajitas till done.  Approx 140&deg; for the beef and 165&deg; for chicken</li>
+                        <li>Slice against the grain for maximum tenderness</li>
+                        <li>Serve on freshly warmed tortillas, topped with those onions and peppers from earlier</font></li>
+                        <li>Finish off with chopped cilantro and some shredded cheese</li>
+                        <li>Make sure to have a proper siesta after the fiesta</li>
                       </ol>
         </body>
 
