more styling experimentation

--- a/fajitas.html
+++ b/fajitas.html
@@ -7,37 +7,37 @@
             </head>
     <body>
       <button style="color: black; font-size: 30px; font-family: 'Times New Roman', Times, serif; background-color: chartreuse;" href="./index.html">Home</button>
-        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 100px;">Señior McDonald's Famous Fajitas</h1>
-          <img src="./img/fajitas.jpg" width="750" alt="photo of 10,000 Chicken Pha-gitas">
-           <p><h2 class="title2">You'd swear they came off the side of a taco truck....</h2></p>
-            <p><h1>Just trying to keep a tradition alive</h1></p>      
+        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 100px;text-align: center;">Señior McDonald's Famous Fajitas</h1>
+          <img src="./img/fajitas.jpg" width="750" alt="photo of 10,000 Chicken Pha-gitas" class="fajitas">
+           <div class="subtitle">You'd swear they came off the side of a taco truck....</div>
+            <p><div style="text-align: center; font-family:Georgia, 'Times New Roman', Times, serif; font-size: 75px;">Just trying to keep a tradition alive</h1></p>      
               <p></p>
-              <p><font size="5">Kids, ya'll come gather round the time machine called "Old Man's Memories" and let me tell you
-                                a story about my escuela secondaria profesor de español.  His name was Señior Mac and he was the most take-no-sh*t teacher I had in school,
-                                but he made some awesome fajitas.  As legend had it, Señior Mac spent his youth in the Peace Corps teaching Spanish language classes
-                                in Central America.  It was during his time in Costa Rica that some friends had shown him this fajita recipe. What Señior Mac learned there,
-                                he brought with him to teach others. These fajitas were so good, he was able to use them as a fund rasier to take a group of students to Costa Rica
-                                every year over spring break.  
+              
+              <div style="text-align: center; font-family: Georgia, 'Times New Roman', Times, serif; font-size: 25px;">Kids, ya'll come gather round the time machine called "Old Man's Memories" and let me tell you
+                a story about my escuela secondaria profesor de español.  His name was Señior Mac and he was the most take-no-sh*t teacher I had in school,
+                but he made some awesome fajitas.  As legend had it, Señior Mac spent his youth in the Peace Corps teaching Spanish language classes
+                in Central America.  It was during his time in Costa Rica that some friends had shown him this fajita recipe. What Señior Mac learned there,
+                he brought with him to teach others. These fajitas were so good, he was able to use them as a fund rasier to take a group of students to Costa Rica
+                every year over spring break.  
 
-                                It's a simple recipe that honeslty takes more waiting that cooking, but it's completely worth it.
-
-              </font></p>
+                It's a simple recipe that honeslty takes more waiting that cooking, but it's completely worth it.</div>
+              
                   <p></p>
                   <p></p>
                   <p></p>
                     <div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 75px;">The Ingredients</div> 
-                    <ul class="ingredients">
+                    <ul>
                         <li>1-2lbs of skirt steak/chicken breast or thigh</li>
                         <li>Fajita Seasoning of Choice</li>
                         <li>2 tblsp lemon juice</li>  
                         <li>1 tblsp lime juice</li>
                         <li>1 Onion</li>
                         <li>1-2 Bell Pepper</li>
-                        <li">Cilantro</li>
-                        <li">Avacado Oil</li>
-                        <li">1-2 tblsp of Butter</li>
-                        <li">Tortillas of choice</li>
-                        <li">Shredded Cheddar/Colby Jack</li>
+                        <li>Cilantro</li>
+                        <li>Avacado Oil</li>
+                        <li>1-2 tblsp of Butter</li>
+                        <li>Tortillas of choice</li>
+                        <li>Shredded Cheddar/Colby Jack</li>
                         <li>1 Bottle of Zesty Italian Salad Dressing</li>
                              <a><em>I'm seriously you guys</em></a>                   
                       </ul>
