various attempts to fix list alignment - failure thus far

--- a/fajitas.html
+++ b/fajitas.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="fajitas.css">
             </head>
     <body>
-      <button style="color: black; font-size: 30px; font-family: 'Times New Roman', Times, serif; background-color: chartreuse;" href="./index.html">Home</button>
+    <button>
+      <a style="color: black; font-size: 30px; font-family: 'Times New Roman', Times, serif; background-color: chartreuse;"a href="./index.html">Home</a>
+    </button>
         <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 100px;text-align: center;">Señior McDonald's Famous Fajitas</h1>
           <img src="./img/fajitas.jpg" width="750" alt="photo of 10,000 Chicken Pha-gitas" class="fajitas">
            <div class="subtitle">You'd swear they came off the side of a taco truck....</div>
@@ -27,7 +29,7 @@
                   <p></p>
                     <div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 75px;">The Ingredients</div> 
                     <ul>
-                        <li>1-2lbs of skirt steak/chicken breast or thigh</li>
+                        <li font size="5"></li>1-2lbs of skirt steak/chicken breast or thigh</font></li>
                         <li>Fajita Seasoning of Choice</li>
                         <li>2 tblsp lemon juice</li>  
                         <li>1 tblsp lime juice</li>
